<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ncnf.user.UserProfileActivity"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/userProfileRoot">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="380dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/navigation_bar_background"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/profileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Profile"
                android:textColor="#fff"
                android:textSize="25dp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingLeft="30dp"
                android:gravity="center">

                <include
                    android:id="@+id/public_profile_picture"
                    layout="@layout/user_picture_view"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/friends_profile_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="openFriendsTab"
                        android:text="@string/friends"
                        android:textSize="10dp"
                        app:icon="@drawable/ic_outline_group_24"
                        android:backgroundTint="@color/black"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bookmark_profile_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:onClick="openBookmark"
                        android:text="@string/bookmark"
                        android:textSize="10dp"
                        app:icon="@drawable/ic_outline_bookmarks_24"
                        android:backgroundTint="@color/black"
                        android:layout_marginTop="20dp"/>


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp"
            android:scrollbars="vertical"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/unselected_icon_color">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editProfileButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="15dp"
                    android:layout_marginEnd="16dp"
                    android:background="#00000000"
                    android:onClick="changeProfileState"
                    android:padding="0dp"
                    app:icon="@drawable/ic_outline_edit_24"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="40dp"
                    app:iconTint="@color/quantum_grey800"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editProfilePictureButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:layout_marginStart="24dp"
                    android:background="#00000000"
                    android:onClick="changeProfilePicture"
                    android:padding="0dp"
                    app:icon="@drawable/ic_outline_portrait_24"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    app:iconSize="40dp"
                    app:iconTint="@color/quantum_grey800"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/userProfileFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="edit your full name"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/editProfileButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/editProfilePictureButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/userProfileUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="40dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="edit your \@username"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/editProfileButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/editProfilePictureButton"
                    app:layout_constraintTop_toBottomOf="@+id/userProfileFullName" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <ImageView
                    android:id="@+id/email_icon_user_profile"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_email_black" />

                <EditText
                    android:id="@+id/userProfileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:hint="Email Address"
                    android:background="@android:color/transparent"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <ImageView
                    android:id="@+id/birthday_icon_user_profile"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_baseline_cake_24" />

                <TextView
                    android:id="@+id/userProfileBirthDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="50dp"
                    android:hint="edit your birthdate"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="50dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_baseline_notifications_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:text="@string/notification_setting"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/profile_notification_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="20dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>