<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/logout_button"
        android:title="Log Out"
        app:showAsAction="always"
        android:windowActionBarOverlay="false"
        android:icon="@drawable/ic_logout_24dp"
        android:iconTint="@color/white"
        />
</menu>